--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,20 +1,36 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "rootDir": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2020", "dom"],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {}
-  },
-  "exclude": ["node_modules", "tmp"]
+      "compileOnSave": false,
+      "compilerOptions": {
+            "rootDir": ".",
+            "sourceMap": true,
+            "declaration": false,
+            "moduleResolution": "node",
+            "emitDecoratorMetadata": true,
+            "experimentalDecorators": true,
+            "importHelpers": true,
+            "target": "es2015",
+            "module": "esnext",
+            "lib": [
+                  "es2020",
+                  "dom"
+            ],
+            "skipLibCheck": true,
+            "skipDefaultLibCheck": true,
+            "baseUrl": ".",
+            "paths": {
+                  "@future-forge/auth": [
+                        "libs/auth/src/index.ts"
+                  ],
+                  "@future-forge/auth-v2": [
+                        "libs/auth-v2/src/index.ts"
+                  ],
+                  "@future-forge/shared": [
+                        "libs/shared/src/index.ts"
+                  ]
+            }
+      },
+      "exclude": [
+            "node_modules",
+            "tmp"
+      ]
 }
